[gd_scene load_steps=8 format=2]

[ext_resource path="res://PistolGuy.gd" type="Script" id=1]
[ext_resource path="res://character.png" type="Texture" id=2]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 29 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.238281, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border" ]

[sub_resource type="DynamicFont" id=2]

size = 14
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Enemy" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "Visibility" ]
AI = true
maxSpeed = 40
shotSpeed = 3.0
damage = 1.0
health = 4
shotCooldown = 1.5
shotRange = 150.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, 23 )
scale = Vector2( 1, 0.3 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

self_modulate = Color( 0.449219, 0, 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
flip_h = true
hframes = 10
frame = 6
_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility" ]

[node name="Rays" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="leftGround" type="RayCast2D" parent="Rays" index="0"]

position = Vector2( -20.979, 24.1074 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 1

[node name="rightGround" type="RayCast2D" parent="Rays" index="1"]

position = Vector2( 20.4268, 23.9234 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 1

[node name="leftWall" type="RayCast2D" parent="Rays" index="2"]

position = Vector2( -17.2984, 19.5067 )
enabled = false
exclude_parent = true
cast_to = Vector2( -10, 0 )
collision_mask = 1

[node name="leftUp" type="RayCast2D" parent="Rays" index="3"]

position = Vector2( -25.2115, -28.708 )
enabled = false
exclude_parent = true
cast_to = Vector2( -50, -50 )
collision_mask = 3

[node name="leftDown" type="RayCast2D" parent="Rays" index="4"]

position = Vector2( -39.358, 32.936 )
enabled = false
exclude_parent = true
cast_to = Vector2( -50, 50 )
collision_mask = 3

[node name="rightDown" type="RayCast2D" parent="Rays" index="5"]

position = Vector2( 39.4428, 32.8888 )
enabled = false
exclude_parent = true
cast_to = Vector2( 50, 50 )
collision_mask = 3

[node name="rightUp" type="RayCast2D" parent="Rays" index="6"]

position = Vector2( 25.2116, -28.8921 )
enabled = false
exclude_parent = false
cast_to = Vector2( 50, -50 )
collision_mask = 3

[node name="rightWall" type="RayCast2D" parent="Rays" index="7"]

position = Vector2( 16.7464, 19.5067 )
enabled = false
exclude_parent = true
cast_to = Vector2( 10, 0 )
collision_mask = 1

[node name="Shots" type="Node2D" parent="." index="3"]

editor/display_folded = true

[node name="ShotR" type="Position2D" parent="Shots" index="0"]

position = Vector2( 27.7002, -6.0746 )

[node name="ShotRU" type="Position2D" parent="Shots" index="1"]

position = Vector2( 22.1926, -25.0273 )

[node name="ShotRD" type="Position2D" parent="Shots" index="2"]

position = Vector2( 23.7467, 17.9 )
_sections_unfolded = [ "Transform" ]

[node name="ShotL" type="Position2D" parent="Shots" index="3"]

position = Vector2( -27.3762, -6.0746 )

[node name="ShotLD" type="Position2D" parent="Shots" index="4"]

position = Vector2( -24.1454, 17.9 )
_sections_unfolded = [ "Transform" ]

[node name="ShotLU" type="Position2D" parent="Shots" index="5"]

position = Vector2( -22.0813, -25.1774 )
_sections_unfolded = [ "Transform" ]

[node name="HPBar" type="ProgressBar" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -14.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 51.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Percent", "custom_styles" ]


